feat: Implement contract upload functionality with risk detection  - Added ModelMapper configuration for object mapping. - Integrated Apache Tika for document parsing in ContractInfoService. - Created DocumentController for handling contract uploads. - Defined DetectedRiskDTO for representing detected risks. - Implemented ContractInfoServiceImpl to save contracts and analyze risks using AI. - Developed AIDetectRisk utility to interact with the Gemini API for risk analysis. - Configured Tika for file type detection and content extraction. -Implement contract upload and AI risk analysis backend (no unit tests yet)

--- a/nowj/pom.xml
+++ b/nowj/pom.xml
@@ -31,6 +31,12 @@
 		<spring-ai.version>1.0.0-M8</spring-ai.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -66,6 +72,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.modelmapper</groupId>
+    		<artifactId>modelmapper</artifactId>
+    		<version>3.2.3</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.squareup.okhttp3</groupId>
+    		<artifactId>okhttp</artifactId>
+   		 	<version>4.12.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.15.2</version>
 		</dependency>
 	</dependencies>
 
