--- a/nowj/pom.xml
+++ b/nowj/pom.xml
@@ -88,6 +88,17 @@
     		<artifactId>jackson-databind</artifactId>
     		<version>2.15.2</version>
 		</dependency>
+		<!-- Tess4J để xử lý OCR ảnh -->
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>5.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.19.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
