--- a/nowj/src/main/resources/application.properties
+++ b/nowj/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=nowj
 server.port=8080
-#  spring.datasource.url=jdbc:mysql://localhost:3306/nowj_oauth
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/nowj_oauth
+ spring.datasource.url=jdbc:mysql://localhost:3306/nowj_oauth
+# spring.datasource.url=jdbc:mysql://host.docker.internal:3306/nowj_oauth
 spring.datasource.username=root
 spring.datasource.password=27092005
 
