Refactor UI tests and update dependencies; add BaseUITest class for shared setup, enhance RegisterPageUITest, and implement tests for Login, Dashboard, Contract Conversation, Upload, and Settings pages.

--- a/nowj/pom.xml
+++ b/nowj/pom.xml
@@ -189,6 +189,12 @@
             <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.5.3</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
