--- a/nowj/src/main/resources/application.properties
+++ b/nowj/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
  spring.datasource.url=jdbc:mysql://localhost:3306/nowj_oauth
 # spring.datasource.url=jdbc:mysql://host.docker.internal:3306/nowj_oauth
 spring.datasource.username=root
-spring.datasource.password=052405
+spring.datasource.password=27092005
 
 
 spring.jpa.hibernate.ddl-auto=none
