--- a/nowj/src/main/resources/application.properties
+++ b/nowj/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=nowj
 server.port=8080
- spring.datasource.url=jdbc:mysql://localhost:3306/nowj_oauth
+spring.datasource.url=jdbc:mysql://localhost:3306/nowj_oauth
 # spring.datasource.url=jdbc:mysql://host.docker.internal:3306/nowj_oauth
 spring.datasource.username=root
 spring.datasource.password=27092005
 
+# Đã xóa các dòng không hợp lệ cho Spring Boot Dashboard
 
 spring.jpa.hibernate.ddl-auto=none
 # spring.jpa.hibernate.ddl-auto=create
