--- a/nowj/pom.xml
+++ b/nowj/pom.xml
@@ -210,6 +210,10 @@
 			<artifactId>jjwt-impl</artifactId>
 			<version>0.12.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
