--- a/nowj/src/main/resources/application.properties
+++ b/nowj/src/main/resources/application.properties
@@ -32,3 +32,7 @@ jwt.expiration-ms=86400000
 # Logging configuration
 logging.level.vn.techmaster.nowj.security=DEBUG
 logging.level.vn.techmaster.nowj.controller=DEBUG
+
+spring.security.oauth2.client.registration.google.client-id=897124184638-man277b99d3jg7eqe8d8lmrneq4l63dc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
