--- a/nowj/Dockerfile
+++ b/nowj/Dockerfile
@@ -1,23 +1,45 @@
 # Build stage
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 WORKDIR /app
-# Copy Maven Wrapper config
+
+# Copy Maven configuration
 COPY .mvn ./.mvn
 COPY pom.xml mvnw mvnw.cmd ./
+
+# Download dependencies (better caching)
+RUN ./mvnw dependency:go-offline -B
+
+# Copy source code
 COPY src ./src
 COPY tessdata ./tessdata
-# Nếu có file cấu hình ngoài src thì copy thêm ở đây
+
+# Build application
 RUN ./mvnw clean package -DskipTests
 
 # Run stage
-FROM eclipse-temurin:21-jre
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-# Copy file jar build ra (nên dùng tên jar cụ thể nếu có)
+
+# Create non-root user
+RUN addgroup -g 1001 -S appgroup && \
+    adduser -S appuser -u 1001 -G appgroup
+
+# Copy application
 COPY --from=build /app/target/*.jar app.jar
 COPY tessdata ./tessdata
 
+# Change ownership
+RUN chown -R appuser:appgroup /app
+
+# Switch to non-root user
+USER appuser
+
+# Expose port
 EXPOSE 8080
 
-# Cho phép truyền JAVA_OPTS khi chạy container
-ENV JAVA_OPTS=""
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
+  CMD curl -f http://localhost:8080/actuator/health || exit 1
+
+# Run application
+ENTRYPOINT ["java", "-Xmx512m", "-Dspring.profiles.active=prod", "-jar", "app.jar"]
