--- a/nowj/src/main/resources/application-prod.properties
+++ b/nowj/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@
 server.port=8080 
 
 # Database configuration (for Production - VÍ DỤ, THAY BẰNG THÔNG TIN THỰC TẾ TỪ RAILWAY CỦA BẠN)
-spring.datasource.url=jdbc:mysql://monorail.proxy.railway.app:21959/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:12587/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=LFDyIqSEmZmlgXMIdnPGDtFKWxSTVlcV
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
