--- a/nowj/src/main/resources/application.properties
+++ b/nowj/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=root
 spring.datasource.password=LFDyIqSEmZmlgXMIdnPGDtFKWxSTVlcV
 
 # JPA and Hibernate settings (Default/Dev)
-spring.jpa.hibernate.ddl-auto=update # Tự động tạo/cập nhật bảng
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
