chore: Update .gitignore and add maven-wrapper.properties for Maven configuration

--- a/nowj/src/main/resources/application-prod.properties
+++ b/nowj/src/main/resources/application-prod.properties
@@ -10,7 +10,7 @@ spring.datasource.password=LFDyIqSEmZmlgXMIdnPGDtFKWxSTVlcV
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA and Hibernate settings (Production)
-spring.jpa.hibernate.ddl-auto=update # Giữ 'update' để tự động tạo/cập nhật bảng trên Railway
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
